--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -17,6 +17,7 @@ jobs:
           SHOW_TITLE: true
           TIME_RANGE: last_30_days
           SHOW_PROJECTS: "False"
+          SHOW_OS: "True"
           SHOW_LINES_OF_CODE: "True"
           SHOW_LOC_CHART: "False"
           LOCALE: "en"
