--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -22,3 +22,4 @@ jobs:
           SHOW_LOC_CHART: "False"
           LOCALE: "en"
           SHOW_DAYS_OF_WEEK: "True"
+          SHOW_TOTAL: "True"
