--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
-          TIME_RANGE: last_30_days
+          TIME_RANGE: all_time
           SHOW_PROJECTS: "False"
           SHOW_OS: "True"
           SHOW_LINES_OF_CODE: "True"
